--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -11,6 +11,8 @@
 name: Michael Emmi
 role: Researcher
 place: IMDEA Software Institute
+dblp: http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael
+github: https://github.com/michael-emmi
 about: >
   <p>Michael received his Ph.D. in Computer Science from the University of
   California, Los Angeles (UCLA) in 2010. Michael joined the IMDEA Software
