--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -14,8 +14,9 @@ place: IMDEA Software Institute
 dblp: http://www.informatik.uni-trier.de/~ley/pers/hd/e/Emmi:Michael
 github: https://github.com/michael-emmi
 about: >
-  <p>Michael received his Ph.D. in Computer Science from the University of
-  California, Los Angeles (UCLA) in 2010. Michael joined the IMDEA Software
+  <p>Michael received his Ph.D. in Computer Science from <abbr title="The
+  University of California, Los Angeles">UCLA</abbr> in 2010.
+  Michael joined the IMDEA Software
   Institute in September 2013, following a post-doc at the Université Paris
   Diderot, on a fellowship awarded by La Fondation Sciences Mathématiques de
   Paris. Prior to receiving his doctorate, Michael completed his undergraduate
