--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -77,7 +77,7 @@ activities:
   role: External Review Committee
 
 - name: VMCAI&nbsp'13
-  desc: 14th International Symposium on Verification, Model Checking and Abstract Interpretation
+  desc: 14th International Conference on Verification, Model Checking and Abstract Interpretation
   URL:  http://vmcai13.di.univr.it/
   role: Program Committee
 
