--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -243,7 +243,7 @@ software:
 - name: <abbr>SMACK</abbr>
   URL: https://github.com/smackers/smack
   desc: >
-    <abbr>LLVM</abbr> bitcode to Boogie translation.
+    Bounded software verifier for C programs.
   
 - name: Observational Refinement Checking
   URL: https://github.com/imdea-software/observational-refinement-checking
