Added PLDI paper.

--- a/data/michaelemmi.yml
+++ b/data/michaelemmi.yml
@@ -106,6 +106,7 @@ publications:
   place: PLDI ’15
   # info: with Constantin Enea, Jad Hamza
   tags: []
+  URL: papers/conf-pldi-EmmiEH15.pdf
 
 - title: '<abbr>SMACK</abbr>+Corral: A Modular Verifier'
   place: TACAS ’15
